# dc2_oligo

./: .gitignore  README.md  analyze.ipynb  edi.txt  environment.yaml  new_model_results.csv  oligo_pred.csv  orient.ipynb  predict.py  prep.ipynb  pyproject.toml  rmadeye_tmp.ipynb  test.csv  unified_results_updated_180823.csv
data/: model.p
data/results/: results.csv
dc2_oligo/: predictor.py  train.py  train.yaml  train_cv.py  utils.py
dc2_oligo/model/: model.p  model_cv.p  results.csv  results_cv.csv
model/: model.p  model_cv.p  model_results.csv  results.csv  results_cv.csv
src/: enhanced_results.csv  predict.py  predictor.py  train.py  train_cv.py
src/results/: model.p  results.csv
tests/: set4_homooligomers.csv  set5_homooligomers.csv  test_dc2.py  test_df.csv
tests/0/: 3e7k_pair_repr_rank_001_alphafold2_multimer_v3_model_1_seed_000.npy  3e7k_pair_repr_rank_002_alphafold2_multimer_v3_model_5_seed_000.npy  3e7k_pair_repr_rank_004_alphafold2_multimer_v3_model_2_seed_000.npy  3e7k_single_repr_rank_001_alphafold2_multimer_v3_model_1_seed_000.npy  3e7k_single_repr_rank_002_alphafold2_multimer_v3_model_5_seed_000.npy  3e7k_single_repr_rank_003_alphafold2_multimer_v3_model_3_seed_000.npy  3e7k_single_repr_rank_004_alphafold2_multimer_v3_model_2_seed_000.npy
tests/1/: 6us8_pair_repr_rank_001_alphafold2_multimer_v3_model_5_seed_000.npy  6us8_pair_repr_rank_002_alphafold2_multimer_v3_model_4_seed_000.npy  6us8_pair_repr_rank_004_alphafold2_multimer_v3_model_2_seed_000.npy  6us8_pair_repr_rank_005_alphafold2_multimer_v3_model_1_seed_000.npy  (+5 more)
wandb/: train.py
(+362 files in other folders)
