[tool.poetry]
name = "dc2-oligo"
version = "0.1.0"
description = "A package for oligomeric state prediction of coiled-coil domain embeddings from AlphaFold2"
authors = ["Rafal Madaj <r.madaj@uw.edu.pl>",
"Jan Ludwiczak"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.4"
scikit-learn = "1.3.0"
joblib = "^1.3.2"
pytest = "^7.4.3"
numpy = "^1.24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
